# OpenStrategia

./: .gitignore  .gitmodules  .travis.yml  Button.cpp  Button.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Checkbox.cpp  Checkbox.hpp  Image.cpp  Image.hpp  Libs.hpp  Main.cpp  Main.hpp  Makefile  OpenStrategia.cbp  Program.cpp  Program.hpp  README.md  RenderObject.cpp  RenderObject.hpp  RenderObject2D.cpp  RenderObject2D.hpp  RenderObject3D.cpp  RenderObject3D.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  index.html  initialize.sh  main.cpp  params.json
doxygen/: doxyfile
include/: Button.hpp  Camera.hpp  Character.hpp  Checkbox.hpp  Font.hpp  GUI.hpp  Global.hpp  Image.hpp  Libs.hpp  LineBreak.hpp  Main.hpp  MultiButton.hpp  Program.hpp  RenderObject.hpp  RenderObject2D.hpp  RenderObject3D.hpp  Renderable.hpp  RenderableComposite.hpp  RenderableCompositeParallel.hpp  RenderableCompositeSwitching.hpp  Shader.hpp  Slider.hpp  Text.hpp  Texture.hpp  TextureBMP.hpp  TextureBridge.hpp  TextureDDS.hpp  TextureHeader.hpp
include/GUI/: Button.hpp  Checkbox.hpp  Image.hpp  MultiButton.hpp  Slider.hpp  Text.hpp
include/Program/: Shader.hpp
include/Text/: Character.hpp  LineBreak.hpp
include/Texture/: TextureBMP.hpp  TextureBridge.hpp  TextureDDS.hpp
src/: Button.cpp  Button.tpp  Camera.cpp  Character.cpp  Checkbox.cpp  Font.cpp  Image.cpp  LineBreak.cpp  Main.cpp  MultiButton.tpp  Program.cpp  RenderObject.cpp  RenderObject2D.cpp  RenderObject3D.cpp  Renderable.cpp  RenderableComposite.cpp  RenderableCompositeParallel.cpp  RenderableCompositeSwitching.cpp  Shader.cpp  Slider.cpp  Text.cpp  Texture.cpp  TextureBMP.cpp  TextureBridge.cpp  TextureDDS.cpp
src/GUI/: Button.tpp  Checkbox.cpp  Image.cpp  MultiButton.tpp  Slider.cpp  Text.cpp
src/Program/: Shader.cpp
src/Text/: LineBreak.cpp
(+7 files in other folders)
